# styxsdr

./: .gitignore  .gitmodules  .rsync-exclude  LICENSE  Makefile  README.md  RELEASING.md  config.mk.example  pyproject.toml  registers.md
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-23-loopback-co-sim-design.md
firmware/: CMakeLists.txt
firmware/cmake/: toolchain-pluto.cmake
firmware/docker/: Dockerfile  Dockerfile.plutosdr-fw
firmware/src/: convert.c  convert.h  dma_rx.c  dma_rx.h  dma_tx.c  dma_tx.h  hal.c  hal.h
firmware/test/: stubs.c  test_convert.c  test_util.h
firmware/tools/: adc_capture.c  hil_inject.c
firmware/tools/platform/: README.md  pluto_burst_loopback.c  pluto_dma_test.c  pluto_loopback.c  pluto_sigladder.c  pluto_stream_test.c  pluto_tx_beacon.c
firmware/vectors/: gen_hil_golden.py  hil_golden.json
fpga/: Makefile
fpga/project/: system_bd.tcl  system_project.tcl  system_top.v
fpga/project/constraints/: dma_timing.xdc  system_constr.xdc
fpga/rtl/: adc_sync.v  async_fifo.v  axi_build_id.v  debug_snap.v  hil_ctrl.v  iq_dma_rx.v  iq_dma_tx.v  snap_axi.v
fpga/tcl/: build.tcl  styx_procs.tcl
fpga/test/: Makefile  axi3_mocks.py  axi_lite_driver.py  tb_iq_dma_loopback.v  test_adc_sync.py  test_async_fifo.py  test_axi_build_id.py  test_debug_snap.py  test_hil_ctrl.py  test_iq_dma_loopback.py  test_iq_dma_rx.py  test_iq_dma_tx.py  test_snap_axi.py
logs/: hardware.jsonl
packaging/: package.sh  patch_adi_loadvals.sh  styx-pluto.dtso
packaging/rootfs/: README.md  issue  motd
scripts/: hardware_baseline.sh
